--- a/src/app/weather-forecast-page/weather-forecast-page.component.html
+++ b/src/app/weather-forecast-page/weather-forecast-page.component.html
@@ -1,1 +1,6 @@
-<p>weather-forecast-page works!</p>
+<div class="row weather-forcaste--container">
+    <div class="col-md-8 height-full"></div>
+    <div class="col-md-4 height-full">
+        <app-detailed-view-page></app-detailed-view-page>
+    </div>
+</div>
