--- a/src/app/weather-forecast-page/weather-forecast-page.component.html
+++ b/src/app/weather-forecast-page/weather-forecast-page.component.html
@@ -1,6 +1,9 @@
 <div class="row weather-forcaste--container">
-    <div class="col-md-8 height-full"></div>
-    <div class="col-md-4 height-full">
-        <app-detailed-view-page></app-detailed-view-page>
-    </div>
+  <div class="col-md-8 height-full">
+    <app-search></app-search>
+
+  </div>
+  <div class="col-md-4 height-full">
+    <app-detailed-view-page></app-detailed-view-page>
+  </div>
 </div>
