Added chart and sunset sunrise component

--- a/src/app/weather-forecast-page/detailed-view/detailed-view-page/detailed-view-page.component.html
+++ b/src/app/weather-forecast-page/detailed-view/detailed-view-page/detailed-view-page.component.html
@@ -1,3 +1,3 @@
 <div class="detailed-view-page--container">
-    <p>detailed-view-page works!</p>
+    <app-sun-rise-set-component></app-sun-rise-set-component>
 </div>
