--- a/src/app/weather-forecast-page/weather-details/weather-overview/weather-overview.component.css
+++ b/src/app/weather-forecast-page/weather-details/weather-overview/weather-overview.component.css
@@ -1,6 +1,10 @@
 .overview-heading {
   font-size: 24px;
   font-weight: 500;
+  line-height: 26px;
+  color: rgba(18, 43, 77, 1);
+  margin-bottom: 20px;
+  padding-left: 15px;
 }
 
 .overview-container {
@@ -8,6 +12,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .card-container {
