--- a/src/app/weather-forecast-page/weather-forecast-page.component.html
+++ b/src/app/weather-forecast-page/weather-forecast-page.component.html
@@ -1,8 +1,8 @@
-<div class="row weather-forcaste--container">
-  <div class="col-md-8 height-full">
+<div class="weather-forcaste--container">
+  <div class="wfc--left-conatiner">
     <app-weather-details></app-weather-details>
   </div>
-  <div class="col-md-4 height-full">
+  <div class="wfc--right-conatiner">
     <app-detailed-view-page></app-detailed-view-page>
   </div>
 </div>
