added progress bar and detailed view header component

--- a/src/app/weather-forecast-page/weather-forecast-page.component.html
+++ b/src/app/weather-forecast-page/weather-forecast-page.component.html
@@ -1,1 +1,8 @@
-<p>weather-forecast-page works!</p>
+<div class="weather-forcaste--container">
+  <div class="wfc--left-conatiner">
+    <app-weather-details></app-weather-details>
+  </div>
+  <div class="wfc--right-conatiner">
+    <app-detailed-view-page></app-detailed-view-page>
+  </div>
+</div>
