--- a/src/app/wellcome-page/wellcome-page.component.html
+++ b/src/app/wellcome-page/wellcome-page.component.html
@@ -1,8 +1,8 @@
 <div style="margin-top: 200px" *ngIf="loader">
   <app-loader></app-loader>
 </div>
-<div class="row" *ngIf="!loader">
-  <div class="col-lg-5 wp-left-content">
+<div class="wellcome-page-container" *ngIf="!loader">
+  <div class="wp-left-content">
     <div class="wp-content-container">
       <p class="wp-header">Weather Forecast</p>
       <p class="wp-header">Prism!</p>
@@ -14,12 +14,12 @@
           they will give you the most accurate results
         </p>
       </div>
-      <button class="btn btn-light btn-lg wp-get-started-button">
+      <button class="btn btn-light btn-lg wp-get-started-button" [routerLink]="['/weather-forecast']">
         Get Started <img src="../../assets/images/cloudy.png" alt="" />
       </button>
     </div>
   </div>
-  <div class="col-lg-7 wp-right-content">
+  <div class="wp-right-content">
     <div class="wp-region-container">
       <div class="wp-region-name">
         <i class="fa-solid fa-location-dot"></i> {{ weather?.region }}
