--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
-.container {
+.main-app-container {
+  height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
 }
