--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <app-navigation-bar></app-navigation-bar>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<div class="main-app-container">
+  <app-navigation-bar></app-navigation-bar>
+  <router-outlet></router-outlet>
 </div>
