--- a/src/app/weather-forecast-page/detailed-view/interval-forecast/interval-forecast.component.html
+++ b/src/app/weather-forecast-page/detailed-view/interval-forecast/interval-forecast.component.html
@@ -1,9 +1,9 @@
 <div class="interval-forecast--container">
   <p class="if--header">Chances of rain</p>
   <div class="if-progress-bars--container">
-    <progress-bar [percentAge]="50" [hour]="6"></progress-bar>
-    <progress-bar [percentAge]="30" [hour]="12"></progress-bar>
-    <progress-bar [percentAge]="60" [hour]="18"></progress-bar>
-    <progress-bar [percentAge]="10" [hour]="24"></progress-bar>
+    <progress-bar [percentAge]="hourlyData[0]" [hour]="6"></progress-bar>
+    <progress-bar [percentAge]="hourlyData[1]" [hour]="12"></progress-bar>
+    <progress-bar [percentAge]="hourlyData[2]" [hour]="18"></progress-bar>
+    <progress-bar [percentAge]="hourlyData[3]" [hour]="24"></progress-bar>
   </div>
 </div>
