--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar sticky-top navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <button
@@ -31,7 +31,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a style="cursor: pointer">Sign In</a>
+          <a style="cursor: pointer;">Sign In</a>
         </li>
       </ul>
     </div>
