--- a/src/app/weather-forecast-page/weather-details/weather-overview/weather-details-card/weather-details-card.component.css
+++ b/src/app/weather-forecast-page/weather-details/weather-overview/weather-details-card/weather-details-card.component.css
@@ -4,9 +4,9 @@
     justify-content: center;
     background-color: rgb(237, 237, 237);
     width: 37.8vw;
-    margin: 6px;
     padding-top: 15px;
     border-radius: 4px;
+    cursor: pointer;
   }
   @media screen and (min-width: 768px) {
     .card-container {
