--- a/src/app/weather-forecast-page/weather-details/weather-overview/weather-overview.component.css
+++ b/src/app/weather-forecast-page/weather-details/weather-overview/weather-overview.component.css
@@ -13,6 +13,7 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 20px;
+  gap: 10px;
 }
 
 .card-container {
@@ -71,4 +72,8 @@
   color: rgb(9, 8, 8);
   font-weight: 500;
   text-align: center;
+}
+
+.active{
+  border: 2px solid #122B4D;
 }
