--- a/src/app/weather-forecast-page/weather-forecast-page.component.css
+++ b/src/app/weather-forecast-page/weather-forecast-page.component.css
@@ -32,8 +32,10 @@
 @media (max-width: 1150px) {
   .wfc--left-conatiner {
     width: 100%;
+    min-width: 100%;
   }
   .wfc--right-conatiner {
+    min-width: 100%;
     width: 100%;
   }
 }
