Added custom pipes and sunrise sunet component is working

--- a/src/app/weather-forecast-page/detailed-view/regional-detail-header/regional-detail-header.component.html
+++ b/src/app/weather-forecast-page/detailed-view/regional-detail-header/regional-detail-header.component.html
@@ -6,7 +6,7 @@
         {{ weather?.state }}, {{ weather?.country }}
       </p>
     </div>
-    <p class="rdh-time-text">{{ currentTime }}</p>
+    <p class="rdh-time-text">{{ currentTime | isoToAmPm }}</p>
   </div>
   <div class="rdh-weather--container">
     <div>
