added custom appender pipes

--- a/src/app/weather-forecast-page/detailed-view/regional-detail-header/regional-detail-header.component.html
+++ b/src/app/weather-forecast-page/detailed-view/regional-detail-header/regional-detail-header.component.html
@@ -6,12 +6,12 @@
         {{ weather?.state }}, {{ weather?.country }}
       </p>
     </div>
-    <p class="rdh-time-text">{{ currentTime }}</p>
+    <p class="rdh-time-text">{{ currentTime | isoToAmPm }}</p>
   </div>
   <div class="rdh-weather--container">
     <div>
       <p><i class="fa-solid fa-cloud fa-2xl" style="color: #ffffff"></i></p>
-      <p class="rdh-temp-text">{{ weather?.temperature }}° C</p>
+      <p class="rdh-temp-text">{{ weather?.temperature | appender:'°C' }}</p>
     </div>
     <p class="rdh-temp-value-text">{{ weather?.weatherStatus }}</p>
   </div>
