--- a/src/app/weather-forecast-page/detailed-view/interval-forecast/progress-bar/progress-bar.component.html
+++ b/src/app/weather-forecast-page/detailed-view/interval-forecast/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 <div class="if-content">
-  <span class="if-hour--text">{{ hour }}h</span>
+  <span class="if-hour--text">{{ hour | appender:'h' }}</span>
   <div class="progress-bar-container">
     <nz-progress
       [nzPercent]="percentAge"
@@ -8,5 +8,5 @@
       [nzStrokeWidth]="20"
     ></nz-progress>
   </div>
-  <span class="if-value--text">{{ percentAge }}%</span>
+  <span class="if-value--text">{{ percentAge | appender:'%' }}</span>
 </div>
