Added custom directive and comments

--- a/src/app/weather-forecast-page/detailed-view/sun-rise-set-component/sun-rise-set-component.component.html
+++ b/src/app/weather-forecast-page/detailed-view/sun-rise-set-component/sun-rise-set-component.component.html
@@ -1,7 +1,7 @@
 <div class="sun-rise-set--container">
   <p class="srss--header">Sunrise & Sunset</p>
   <div class="srss-col-container">
-    <div class="sun-rise-set-card">
+    <div appCardHover class="sun-rise-set-card">
       <div class="srss-left-content">
         <img src="../../../../assets/images/sun.png" alt="Sunrise" />
         <div class="srss--content">
@@ -13,7 +13,7 @@
         <p class="srss-sun--hours">{{sunriseTime | hoursAgoIn}}</p>
       </div>
     </div>
-    <div class="sun-rise-set-card">
+    <div appCardHover class="sun-rise-set-card">
       <div class="srss-left-content">
         <img src="../../../../assets/images/sunset-.png" alt="Sunset" />
         <div class="srss--content">
