--- a/src/app/weather-forecast-page/weather-details/weather-overview-cards/weather-overview.component.html
+++ b/src/app/weather-forecast-page/weather-details/weather-overview-cards/weather-overview.component.html
@@ -1,30 +1,30 @@
 <h1 class="overview-heading">Today Overview</h1>
-<div class="overview-container" *ngIf="weather?.city">
+<div class="overview-container" *ngIf="(weather$ | async)?.city">
   <app-weather-details-card
     [valueText]="'Rain Chance'"
     [iconName]="'fa-droplet'"
-    [weatherValue]="weather?.rainChance | appender:'%'"
+    [weatherValue]="(weather$ | async)?.rainChance | appender:'%'"
     (click)="onClickDetailedReport('rain')"
     [ngClass]="{'active': clickedWeather == 'rain'}"
   ></app-weather-details-card>
   <app-weather-details-card
     [valueText]="'Temperature'"
     [iconName]="'fa-temperature-three-quarters'"
-    [weatherValue]="weather?.temperature | appender:'°C'"
+    [weatherValue]="(weather$ | async)?.temperature | appender:'°C'"
     (click)="onClickDetailedReport('temperature')"
     [ngClass]="{'active': clickedWeather == 'temperature'}"
   ></app-weather-details-card>
   <app-weather-details-card
     [valueText]="'Wind Speed'"
     [iconName]="'fa-wind'"
-    [weatherValue]="weather?.wind | appender:'km/h'"
+    [weatherValue]="(weather$ | async)?.wind | appender:'km/h'"
     (click)="onClickDetailedReport('wind')"
     [ngClass]="{'active': clickedWeather == 'wind'}"
   ></app-weather-details-card>
   <app-weather-details-card
     [valueText]="'Precipitation'"
     [iconName]="'fa-snowflake'"
-    [weatherValue]="weather?.precipitation | appender:'%'"
+    [weatherValue]="(weather$ | async)?.precipitation | appender:'%'"
     (click)="onClickDetailedReport('precipitation')"
     [ngClass]="{'active': clickedWeather == 'precipitation'}"
   ></app-weather-details-card>
