--- a/src/app/weather-forecast-page/weather-details/weather-details.component.html
+++ b/src/app/weather-forecast-page/weather-details/weather-details.component.html
@@ -1,4 +1,4 @@
-<app-search></app-search>
+<app-search [(city)]="city"></app-search>
 <weather-overview-cards></weather-overview-cards>
 <line-chart
   [borderColor]="'rgba(18, 43, 77, 1)'"
