--- a/src/app/weather-forecast-page/detailed-view/interval-forecast/interval-forecast.component.html
+++ b/src/app/weather-forecast-page/detailed-view/interval-forecast/interval-forecast.component.html
@@ -1,5 +1,5 @@
 <div class="interval-forecast--container">
-  <p class="if--header">Chances of rain</p>
+  <p class="if--header">{{ text}} </p>
   <div class="if-progress-bars--container">
     <progress-bar [percentAge]="hourlyData[0]" [hour]="6"></progress-bar>
     <progress-bar [percentAge]="hourlyData[1]" [hour]="12"></progress-bar>
