--- a/src/app/weather-forecast-page/detailed-view/interval-chart-forecast/interval-chart-forecast.component.html
+++ b/src/app/weather-forecast-page/detailed-view/interval-chart-forecast/interval-chart-forecast.component.html
@@ -1,5 +1,5 @@
 <div class="interval-chart-forecast--container">
-  <p class="icf--header">{{ title }} Hourly Forecast</p>
+  <p class="icf--header">{{ title }} {{text}}</p>
   <div class="cc-chart--container">
     <canvas
       height="150"
