--- a/src/app/wellcome-page/wellcome-page.component.html
+++ b/src/app/wellcome-page/wellcome-page.component.html
@@ -9,14 +9,14 @@
       <div>
         <p class="wp-subheader">
           We are the weather forecast system. <br />
-         {{description}}
+          {{ description }}
         </p>
       </div>
       <button
         class="btn btn-light btn-lg wp-get-started-button"
         [routerLink]="['/weather-forecast']"
       >
-        Get Started <img src="../../assets/images/cloudy.png" alt="" />
+       {{btnText }} <img src="../../assets/images/cloudy.png" alt="" />
       </button>
     </div>
   </div>
@@ -28,7 +28,9 @@
     </div>
     <div class="wp-temprature-card-container">
       <div class="wp-temprature-container">
-        <span class="wp-temperature-text">{{ (weather$ | async)?.temperature }}</span>
+        <span class="wp-temperature-text">{{
+          (weather$ | async)?.temperature
+        }}</span>
         <span class="wp-degree">o</span>
         <span class="wp-temperature-text"> C</span>
       </div>
@@ -41,28 +43,30 @@
           width="200"
         />
       </div>
-      <div class="wp-weather-text">{{ (weather$ | async)?.weatherCondition }}</div>
+      <div class="wp-weather-text">
+        {{ (weather$ | async)?.weatherCondition }}
+      </div>
       <div class="wp-full-report row">
         <div class="wp-single-report col-xs-5 wp-right-border">
           <span
             ><i class="fa-solid fa-snowflake fa-xs" style="color: #ffffff"></i>
             Precipitation</span
           >
-          <span>{{ (weather$ | async)?.precipitation | appender:'%' }}</span>
+          <span>{{ (weather$ | async)?.precipitation | appender : "%" }}</span>
         </div>
         <div class="wp-single-report col-xs-4 wp-right-border">
           <span
             ><i class="fa-solid fa-droplet fa-xs" style="color: #ffffff"></i>
             Humidity</span
           >
-          <span>{{ (weather$ | async)?.humidity | appender:'%' }}</span>
+          <span>{{ (weather$ | async)?.humidity | appender : "%" }}</span>
         </div>
         <div class="wp-single-report col-xs-3">
           <span
             ><i class="fa-solid fa-wind fa-sm" style="color: #ffffff"></i>
             Wind</span
           >
-          <span>{{ (weather$ | async)?.wind | appender:'km/h' }}</span>
+          <span>{{ (weather$ | async)?.wind | appender : "km/h" }}</span>
         </div>
       </div>
     </div>
